--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "csv-parser": "^2.2.0",
+    "csv2json": "^1.4.2",
+    "csvtojson": "^2.0.8",
+    "json2csv": "^4.5.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "react-scrollspy": "^3.4.0",
+    "request": "^2.88.0"
   },
   "scripts": {
     "start": "react-scripts start",
